<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sosentry_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context="com.example.myapps.meditrack.SOSEntryScreen">
    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_margin="@dimen/dimen_16dp"
        android:text="@string/text_welcome"/>
    <LinearLayout
        android:id="@+id/ll_sos_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_1dp"
        android:paddingBottom="@dimen/dimen_24dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/dimen_16dp"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:textSize="20sp"
                android:paddingStart="15dp"
                android:layout_weight=".8"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/sos_name"
                android:paddingLeft="15dp" />
            <EditText
                android:id="@+id/edt_sos_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:hint=""
                android:inputType="text"
                android:textColor="@color/black"
                android:padding="@dimen/activity_horizontal_margin"
                android:background="@drawable/rounded_border_bg"
                >
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_margin="@dimen/dimen_16dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_weight=".8"
                android:text="@string/sos_mob"
                android:textSize="20sp"
                android:paddingStart="15dp"
                android:gravity="left|center_vertical"
                android:textStyle="bold"
                android:paddingLeft="15dp">
            </TextView>
            <EditText
                android:id="@+id/edt_sos_mob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:hint=""
                android:inputType="phone"
                android:textColor="@color/black"
                android:padding="@dimen/activity_horizontal_margin"
                android:background="@drawable/rounded_border_bg"
                >
            </EditText>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_submit_sos_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textStyle="bold"
        android:padding="@dimen/dimen_8dp"
        android:layout_below="@+id/ll_sos_info"
        android:layout_margin="@dimen/dimen_16dp"
        android:background="@color/colorPrimaryDark"
        android:layout_centerInParent="true"
        android:textColor="@color/white"/>
</RelativeLayout>
