<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_weight="1"
        android:stackFromBottom="true"
        android:background="@color/bg_color"
        android:transcriptMode="alwaysScroll">
        <LinearLayout
            android:id="@+id/LL_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_1dp"
            android:paddingBottom="@dimen/dimen_24dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txt_user_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimen_20sp"
                    android:layout_weight="1.4"
                    android:textColor="@color/white"
                    android:gravity="center|center_vertical"
                    android:textStyle="bold"
                    android:drawableStart="@drawable/usr_icon"
                    android:drawablePadding="@dimen/dimen_2dp"
                    android:padding="@dimen/dimen_4dp"
                    android:drawableLeft="@drawable/usr_icon" />
                <TextView
                    android:id="@+id/txt_user_age"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimen_16sp"
                    android:layout_weight=".6"
                    android:textColor="@color/white"
                    android:padding="@dimen/dimen_4dp"
                    android:drawableEnd="@drawable/edit"
                    android:drawablePadding="@dimen/dimen_2dp"
                    android:gravity="start|center_vertical"
                    android:textStyle="italic"
                    android:drawableRight="@drawable/edit" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txt_title_sos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimen_20sp"
                    android:layout_weight=".7"
                    android:textColor="@color/white"
                    android:gravity="start|center_vertical"
                    android:text="@string/sos_details"
                    android:textStyle="bold"
                    android:padding="@dimen/dimen_4dp"
                    />
                <TextView
                    android:id="@+id/txt_sos_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimen_16sp"
                    android:layout_weight=".5"
                    android:textColor="@color/white"
                    android:gravity="center|center_vertical"
                    android:textStyle="bold"
                    android:padding="@dimen/dimen_4dp"
                    />
                <TextView
                    android:id="@+id/txt_sos_mob"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimen_14sp"
                    android:layout_weight=".8"
                    android:textColor="@color/white"
                    android:padding="@dimen/dimen_4dp"
                    android:drawableEnd="@drawable/edit"
                    android:drawablePadding="@dimen/dimen_2dp"
                    android:gravity="center_vertical"
                    android:textStyle="italic"
                    android:drawableRight="@drawable/edit" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_2dp"
                android:layout_margin="@dimen/dimen_2dp"
                android:background="@color/white"/>
              <TextView
                  android:id="@+id/txt_title_med"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="@dimen/dimen_10dp"
                  android:textColor="@color/white"
                  android:textSize="@dimen/dimen_20sp"
                  android:textStyle="bold"
                  android:text="@string/add_med"
                  android:gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_2dp"
                android:layout_margin="@dimen/dimen_2dp"
                android:background="@color/white"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/dimen_16dp"
                android:weightSum="2">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textSize="18sp"
                    android:paddingStart="15dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="Medicine Name"
                    android:textStyle="bold"
                    android:paddingLeft="15dp" />
                <EditText
                    android:id="@+id/edt_medicine_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint=""
                    android:inputType="text"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textColor="@color/black"
                    android:background="@drawable/rounded_border_bg"
                    >
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_margin="@dimen/dimen_16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:textColor="@android:color/white"
                    android:layout_weight="1.2"
                    android:text="Dose Frequency"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_margin="@dimen/activity_horizontal_margin">
                </TextView>
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_dose_frequency"
                    android:textStyle="bold"
                    android:layout_weight=".8"
                    android:background="@color/light_gray"
                    android:padding="@dimen/dimen_8dp"
                    android:entries="@array/dose_type"
                    android:spinnerMode="dropdown"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/dimen_16dp"
                android:weightSum="2">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:gravity="left"
                    android:textSize="18sp"
                    android:paddingStart="15dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="Number Of Tablets"
                    android:paddingLeft="15dp" />
                <EditText
                    android:id="@+id/edt_tablet_num"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:hint="Eg. 1,2"
                    android:inputType="number"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textColor="@color/black"
                    android:background="@drawable/rounded_border_bg"
                    >
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/dimen_16dp"
                android:weightSum="2">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:gravity="left"
                    android:textSize="18sp"
                    android:paddingStart="15dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="Number Of Dose/Day"
                    android:paddingLeft="15dp" />
                <EditText
                    android:id="@+id/edt_dose_per_day"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:hint="Eg. 2,3"
                    android:inputType="number"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:background="@drawable/rounded_border_bg"
                    >
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/dimen_16dp"
                android:weightSum="2">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:gravity="left"
                    android:textSize="18sp"
                    android:paddingStart="15dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="Number of Medicines Purchased"
                    android:paddingLeft="15dp" />
                <EditText
                    android:id="@+id/edt_medicine_buy_num"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:hint="Eg. 5,10"
                    android:inputType="number"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textColor="@color/black"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_border_bg"
                    >
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/dimen_16dp"
                android:weightSum="2">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textSize="18sp"
                    android:paddingStart="15dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="Dose Time"
                    android:paddingLeft="15dp" />
                <TextView
                    android:id="@+id/set_dose_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/alarm"
                    android:drawablePadding="@dimen/dimen_4dp"
                    android:gravity="center_vertical"
                    android:text="@string/set_time"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:background="@drawable/rounded_border_bg"
                    android:drawableRight="@drawable/alarm">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/dimen_16dp"
                android:gravity="center"
                android:weightSum="2">
                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Submit"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:layout_margin="@dimen/dimen_16dp"
                    android:background="@color/colorPrimaryDark"/>
            </LinearLayout>
        </LinearLayout>
</ScrollView>